# ProspectEngine

./: .env.example  .gitignore  README.md
apps/web/: drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/drizzle/: 0000_initial_schema.sql  0001_updated_at_triggers.sql  0002_data_quality_columns.sql  0003_scoring_v2_rules.sql  0004_validation_overrides.sql  0005_lethal_rhodey.sql
apps/web/src/: middleware.ts  proxy.ts  stack.ts
docs/: DEPLOYMENT_EC2.md
fixtures/: sample-import.csv
fixtures/search-results/: commercial-cleaning-company-minnesota.json  excavation-company-minnesota.json  excavation-contractor-minnesota.json  hvac-company-minnesota.json  landscaping-company-western-wisconsin.json  plumbing-company-minnesota.json
services/research-worker/: install-worker-task.ps1  pyproject.toml  run-worker.ps1
services/research-worker/tests/: test_dedupe.py  test_enrichment.py  test_extraction.py  test_identity.py  test_normalize.py  test_queue.py  test_regressions.py  test_scoring.py  test_validation.py
services/research-worker/worker/: config.py  crawler.py  db.py  dedupe.py  drafting.py  enrichment.py  extraction.py  htmlmeta.py  hypotheses.py  identity.py  main.py  normalize.py  people.py  providers.py  queue.py  scoring.py  validation.py
services/research-worker/worker/adapters/: search.py
services/research-worker/worker/handlers/: __init__.py  candidates.py  discovery.py  enrich.py  qualify.py  research.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260717000001_initial_schema.sql
(+71 files in other folders)
