[project]
name = "research-worker"
version = "0.1.0"
description = "Background research worker for the lead generator"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Line width is enforced by the formatter; remaining E501s are long regex/SQL strings.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
